--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href= "1\index.html" class="nav-link scrollto"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -78,7 +79,6 @@
             <img src="assets/img/Akward.jpg" class="img-fluid" alt="" height="300px">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Game Developer Wannabbe</h3>
             <p class="fst-italic">
           
             </p>
