--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href= "1\index.html" class="nav-link scrollto"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
+          <li><a href= "1\" class="nav-link scrollto"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
