--- a/1/index.html
+++ b/1/index.html
@@ -49,7 +49,7 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="../index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href= "index.html" class="nav-link scrollto active"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
+          <li><a href= "#" class="nav-link scrollto active"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
