--- a/1/index.html
+++ b/1/index.html
@@ -50,6 +50,7 @@
         <ul>
           <li><a href="../" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href= "#" class="nav-link scrollto active"><i class="bx bx-info-square"></i> <span>ReGex</span></a></li>
+          <li><a href= "../2/" class="nav-link scrollto"><i class="bx bx-info-square"></i> <span>Tailwind</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
